improve: add Core Module for Step and StepsHandler + add a label for Step

--- a/NansBehaviorSteps.uplugin
+++ b/NansBehaviorSteps.uplugin
@@ -16,6 +16,11 @@
 	"Installed": false,
 	"Modules": [
 		{
+			"Name": "NansBehaviorStepsCore",
+			"Type": "Runtime",
+			"LoadingPhase": "PreLoadingScreen"
+		},
+		{
 			"Name": "NansBehaviorSteps",
 			"Type": "Runtime",
 			"LoadingPhase": "PreLoadingScreen"
